# lane-detection

./: .gitignore  README.md  main.py  pyproject.toml
agents/: plan.md
configs/: default.yaml
src/dataset/: augmentations.py  dataset.py
src/export/: __init__.py  to_onnx.py  to_tensorrt.py
src/extraction/: extract_images.py
src/models/: base.py  efficientnet.py  factory.py  mobilenetv3.py  resnet.py
src/preprocessing/: convert_annotations.py  crop.py  prepare_dataset.py
src/ros/: __init__.py  inference_node.py
src/training/: losses.py  metrics.py  trainer.py
