[project]
name = "lane-detection"
version = "0.1.0"
description = "Lane center detection model for robotic cars"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "opencv-python>=4.8",
    "albumentations>=1.3",
    "rosbags>=0.10",
    "rosbags-image>=0.4",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "tqdm>=4.65",
    "pandas>=2.0",
]

[project.optional-dependencies]
# TensorRT - install on Jetson via NVIDIA's packages, not PyPI
# tensorrt = ["tensorrt>=8.6"]

# ROS2 dependencies are NOT available on PyPI - they're installed via:
#   sudo apt install ros-humble-rclpy ros-humble-sensor-msgs ros-humble-std-msgs ros-humble-cv-bridge
# ros = ["rclpy", "sensor_msgs", "std_msgs", "cv_bridge"]

dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
lane-detection = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py"]

[tool.uv]
package = true
